--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@types/express": "^4.17.6",
 		"@types/jsonwebtoken": "^8.5.0",
 		"@types/node": "^14.0.1",
+		"@types/nunjucks": "^3.1.3",
 		"@types/request-promise": "^4.1.46",
 		"concurrently": "^5.2.0",
 		"nodemon": "^2.0.4",
@@ -33,6 +34,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"nunjucks": "^3.2.2",
 		"redux": "^4.0.5",
 		"request": "^2.88.2",
 		"request-promise": "^4.2.5"
