--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/jsonwebtoken": "^8.5.0",
 		"@types/node": "^14.0.1",
 		"@types/nunjucks": "^3.1.3",
+		"@types/qrcode": "^1.3.5",
 		"@types/request-promise": "^4.1.46",
 		"concurrently": "^5.2.0",
 		"nodemon": "^2.0.4",
@@ -35,6 +36,7 @@
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"nunjucks": "^3.2.2",
+		"qrcode": "^1.4.4",
 		"redux": "^4.0.5",
 		"request": "^2.88.2",
 		"request-promise": "^4.2.5"
