--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@types/express": "^4.17.6",
 		"@types/jsonwebtoken": "^8.5.0",
 		"@types/node": "^14.0.1",
+		"@types/nodemailer": "^6.4.0",
 		"@types/nunjucks": "^3.1.3",
 		"@types/pg": "^7.14.7",
 		"@types/qrcode": "^1.3.5",
@@ -36,6 +37,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"nodemailer": "^6.4.17",
 		"nunjucks": "^3.2.2",
 		"pg": "^8.5.1",
 		"qrcode": "^1.4.4",
