feat: add ability to send real emails

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 # Rename this file to `.env` and add environment variables to it.
 # They will be loaded by the server using dotenv.
 # Lines starting with `#` are ignored as comments.
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+
+# Must be set to 'false' to enable real emails
+SMTP_USE_TEST_ACCOUNT=true
